--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,25 @@ tmp/*
 ^tmp/.keep
 
 build/tests
+
+logs
+target
+*.iml
+/.idea
+/.idea_modules
+/.classpath
+/.project
+/.settings
+/RUNNING_PID
+.ensime
+.ensime_cache
+.sbtserver/
+.sass-cache/
+project/.sbtserver
+project/.sbtserver.lock
+project/play-fork-run.sbt
+project/sbt-ui.sbt
+phantomjsdriver.log
+activator
+activator-launch-1.3.6.jar
+.DS_Store
